--- a/CandidatosProyect.Client/Views/Candidatos/Edit.cshtml
+++ b/CandidatosProyect.Client/Views/Candidatos/Edit.cshtml
@@ -10,33 +10,58 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>            
+        <form asp-action="Edit" enctype="multipart/form-data">
+
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Apellido" class="control-label"></label>
                 <input asp-for="Apellido" class="form-control" />
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="FechaNacimiento" class="control-label"></label>
                 <input asp-for="FechaNacimiento" class="form-control" />
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Telefono" class="control-label"></label>
                 <input asp-for="Telefono" class="form-control" />
                 <span asp-validation-for="Telefono" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="CV" class="control-label"></label>
+                <input type="file" asp-for="CV" class="form-control-file" />
+                <span asp-validation-for="CV" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <input id="botonAddEmpleo" type="button" value="Agregar Empleo" class="btn btn-warning" data-url="@Url.Action("GetChildEmpleo", "Candidatos")" />
+            </div>
+
+            <div id="newEmpleoDiv">
+            </div>
+
+            @foreach (var empleo in Model.Empleos)
+            {
+                await Html.RenderPartialAsync("Empleo", empleo);
+            }
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -45,7 +70,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver</a>
 </div>
 
 @section Scripts {
