--- a/CandidatosProyect.Client/Views/Candidatos/Index.cshtml
+++ b/CandidatosProyect.Client/Views/Candidatos/Index.cshtml
@@ -52,9 +52,9 @@
                     @Html.DisplayFor(modelItem => candidato.Telefono)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = candidato.IdEntity }) |
-                    @Html.ActionLink("Details", "Details", new { id = candidato.IdEntity }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = candidato.IdEntity })
+                    @Html.ActionLink("Editar", "Edit", new { id = candidato.IdEntity }) |
+                    @Html.ActionLink("Ver", "Details", new { id = candidato.IdEntity }) |
+                    @Html.ActionLink("Eliminar", "Delete", new { id = candidato.IdEntity })
                 </td>
             </tr>
         }
