--- a/CandidatosProyect.Client/Views/Candidatos/Create.cshtml
+++ b/CandidatosProyect.Client/Views/Candidatos/Create.cshtml
@@ -4,15 +4,16 @@
     ViewData["Title"] = "Nuevo Candidato";
 }
 
-<h1>Crear</h1>
+<h1 class="text-center col-md-6">Crear</h1>
 
-<h4>Nuevo Candidato</h4>
+<h4 class="text-center col-md-6">Nuevo Candidato</h4>
 <hr />
 <div class="row">
     <div class="col-md-6">
         <form asp-action="Create" enctype="multipart/form-data">
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -49,15 +50,15 @@
                 <span asp-validation-for="CV" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <input id="botonAddEmpleo" type="button" value="Agregar Empleo" class="btn btn-warning" data-url="@Url.Action("GetChildEmpleo", "Candidatos")" />
+            <div class="form-group text-center">
+                <input id="botonAddEmpleo" type="button" value="Agregar Empleo" class="btn btn-info" data-url="@Url.Action("GetChildEmpleo", "Candidatos")" />
             </div>
 
             <div id="newEmpleoDiv">
             </div>
 
-            <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-primary" />
+            <div class="form-group text-center">
+                <input type="submit" value="Crear" class="btn btn-success btn-lg col-md-12" />
             </div>
         </form>
     </div>
