--- a/CandidatosProyect.Client/Views/Candidatos/Delete.cshtml
+++ b/CandidatosProyect.Client/Views/Candidatos/Delete.cshtml
@@ -4,19 +4,13 @@
     ViewData["Title"] = "Eliminar";
 }
 
-<h1>Eliminar</h1>
+<h1 class="text-center">Eliminar</h1>
 
-<h3>Estas Seguro de Eliminar?</h3>
-<div>
+<h3 class="text-center">¿Estas Seguro de Eliminar?</h3>
+<div class="text-center">
     <h4>Candidato</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Codigo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Codigo)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
@@ -49,8 +43,8 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+    <form asp-action="Delete" class="text-left">
+        <a asp-action="Index">Volver</a>|
+        <input type="submit" value="Eliminar" class="btn btn-danger" />
     </form>
 </div>
