--- a/CandidatosProyect.Client/Views/Candidatos/Details.cshtml
+++ b/CandidatosProyect.Client/Views/Candidatos/Details.cshtml
@@ -6,8 +6,8 @@
 
 <h1>Detalles</h1>
 
-<div>
-    <h4>Candidato @Model.Nombre</h4>
+<div class="text-center">
+    <h4 class="text-left">Candidato @Model.Nombre</h4>
     <hr />
 
     <dl class="row">
