--- a/CandidatosProyect.Client/Views/Candidatos/Edit.cshtml
+++ b/CandidatosProyect.Client/Views/Candidatos/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Modificar";
 }
 
-<h1>Modificar</h1>
+<h1 class="text-center col-md-6">Modificar</h1>
 
-<h4>Modificar Candidato</h4>
+<h4 class="text-center col-md-6">Modificar Candidato</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -50,7 +50,7 @@
                 <span asp-validation-for="CV" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group text-center">
                 <input id="botonAddEmpleo" type="button" value="Agregar Empleo" class="btn btn-warning" data-url="@Url.Action("GetChildEmpleo", "Candidatos")" />
             </div>
 
@@ -62,8 +62,8 @@
                 await Html.RenderPartialAsync("Empleo", empleo);
             }
 
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group text-center">
+                <input type="submit" value="Guardar" class="btn btn-success btn-lg col-md-12" />
             </div>
         </form>
     </div>
