--- a/CandidatosProyect.Client/Views/Candidatos/Index.cshtml
+++ b/CandidatosProyect.Client/Views/Candidatos/Index.cshtml
@@ -6,11 +6,7 @@
 
 <h1 class="text-center">Candidatos</h1>
 
-<p class="text-center">
-    <a class="btn btn-dark" asp-action="Create">Crear Nuevo Candidato</a>
-</p>
-
-<table class="table-dark table table-striped table-hover table-bordered">
+<table class="table-dark table table-striped table-hover table-bordered text-center">
     <thead>
         <tr>
             <th>
@@ -60,3 +56,7 @@
         }
     </tbody>
 </table>
+
+<div class="text-center">
+    <a class="btn btn-dark" asp-action="Create">Crear Nuevo Candidato</a>
+</div>
